--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     margin: 0;
     border: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif
 }
 a{
     text-decoration: none;
@@ -36,4 +37,98 @@ body{
 .wrapper{
     min-height: 100%;
     overflow: hidden;
+}
+#main-doc{
+    display: flex;
+}
+#navbar{
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 300px;
+    height: 100vh;
+    border-right: 3px solid gray;
+}
+#navbar header{
+    width: 100%;
+}
+#navbar h2{
+    font-size: 30px;
+    font-weight: 300;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#nav-links{
+    overflow: scroll;
+    overflow-x: hidden;
+    height: calc(100% - 80px);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.nav-link{
+    width: 100%;
+    padding: 17px 0px 17px 30px;
+    border-top: 1px solid black;
+    color: gray;
+    font-size: 17px;
+}
+#sections{
+    margin-left: 300px;
+}
+.main-section{
+    margin: 30px;
+}
+.main-section h2{
+    font-size: 30px;
+    padding: 5px;
+}
+.main-section p{
+    margin: 20px 0px 0px 20px;
+    line-height: 1.4;
+    color: rgb(59, 59, 59);
+}
+.main-section li{
+    list-style: disc;
+    margin-left: 60px;
+    margin-top: 20px;
+    color: rgb(59, 59, 59);
+}
+.main-section li li{
+    list-style: circle;
+}
+.main-section code{
+    display: flex;
+    padding: 25px;
+    line-height: 1.5;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 7px;
+    background-color: rgb(236, 236, 236);
+    color: rgb(48, 48, 48);
+    margin: 10px 30px;
+}
+@media (max-width: 800px){
+    #main-doc{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    #navbar{
+        position: inherit;
+        width: 100%;
+        height: 300px;
+    }
+    #nav-links{
+        border: 1px solid black;
+    }
+    #sections{
+        margin: 0;
+        width: 100%;
+    }
 }
